<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

         <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/plot"
            android:textColor="#FFFF00"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="4dp"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/plot_summary"
            android:textSize="20sp"
            android:padding="4dp"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gameflow"
            android:textSize="24sp"
            android:textColor="#FFFF00"
            android:textStyle="bold"
            android:padding="4dp"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gameflow_summary"
            android:textSize="20sp"
            android:padding="2dp"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/recommendations"
            android:textSize="24sp"
            android:textColor="#FFFF00"
            android:textStyle="bold"
            android:padding="4dp"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommendations_summary"
            android:textSize="20sp"
            android:padding="2dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

        <Button
            android:id="@+id/return_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_game"
            android:textColor="#FFFF00"
            android:textSize="20sp"
            android:padding="20dp"
            style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>