<?xml version="1.0" encoding="utf-8"?>
<!--
 Source:
 Google Inc. (2014a). Google Play Game Services: Android Samples: SkeletonTbmp [Software].
 Available from https://github.com/playgameservices/android-basic-samples
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">
        <EditText
            android:id="@+id/input_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="32dp"
            android:hint="@string/enter_singular_noun"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">
        <Button
           android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/done"
            android:textSize="20sp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/cancel"
            android:textSize="20sp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/leave_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/leave"
            android:textSize="20sp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>
</LinearLayout>