<?xml version="1.0" encoding="utf-8"?>

<!--
 Source:
 Google Inc. (2014b). Google Play Game Services: Android Samples: TypeANumber [Software].
 Available from https://github.com/playgameservices/android-basic-samples
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/screen_menu"
    android:gravity="center">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:id="@+id/alibi"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/play_alibi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_alibi"
            android:textSize="20sp"
            android:padding="8dp"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/check_inbox_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_inbox"
            android:textSize="20sp"
            android:padding="8dp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/tutorial_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial"
            android:textSize="20sp"
            android:padding="8dp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="4dp"
            android:id="@+id/hello" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="20sp"
            android:padding="16dp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</LinearLayout>

<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->